error.txt
   Compiling system-monitor v1.0.0 (C:\Users\addy\Pictures\rust app)
warning: unused import: `std::path::PathBuf`
 --> src\updater.rs:3:5
  |
3 | use std::path::PathBuf;
  |     ^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `TrayIconEvent`
  --> src\main.rs:63:69
   |
63 | use tray_icon::{TrayIconBuilder, menu::{Menu, MenuItem, MenuEvent}, TrayIconEvent};
   |                                                                     ^^^^^^^^^^^^^

error[E0425]: cannot find function `load_tray_icon` in this scope
    --> src\main.rs:1258:29
     |
1258 |         if let Some(icon) = load_tray_icon() {
     |                             ^^^^^^^^^^^^^^ not found in this scope

For more information about this error, try `rustc --explain E0425`.
warning: `system-monitor` (bin "system-monitor") generated 2 warnings
error: could not compile `system-monitor` (bin "system-monitor") due to 1 previous error; 2 warnings emitted
